--- a/components/sass/_responsive.scss
+++ b/components/sass/_responsive.scss
@@ -1,5 +1,7 @@
 @media screen and (min-width: 992px) {
-
+  .more-info{
+    display: none;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -10,7 +12,7 @@
 
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
   .header-wrapper{
     margin-bottom: $space-medium;
 
@@ -194,6 +196,10 @@
             display: table-cell;
             width: 1%;
           }
+        }
+
+        .more-info{
+          display: inline-block;
         }
       }
     }
